# android_log_viewer

./: .gitignore  README.md  android_log_viewer.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
android_log_viewer/: __init__.py  adb.py  app.py  log_parser.py  main_window.py  workers.py
tests/: test_adb.py  test_log_parser.py  test_main_window.py
