[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-log-viewer"
version = "0.1.0"
description = "Cross-platform Android logcat, dumpsys, and bugreport desktop viewer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pyinstaller>=6.8,<7",
]

[project.scripts]
android-log-viewer = "android_log_viewer.app:main"

[tool.setuptools.packages.find]
include = ["android_log_viewer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
